<resources>
    <string name="app_name">NITER Campuspedia</string>
    <string name="about1">National Institute of Textile Engineering and Research (NITER) is the first education institute running as a Public-Private-Partnership (PPP) organization under the Ministry of Textiles and Jute, GoB. It is located in its own campus at Nayarhat, Savar, Dhaka adjacent to the Dhaka-Aricha highway and enjoys excellent communication facilities connecting among important cities of the country. The total campus area of NITER is 13.06 Acres with adequate built up space in its academic, administrative, hostels, Canteen and other buildings.

As per the decision of the Ministry of Textiles and Jute, NITER has been running under the management of ‘Bangladesh Textile Mills Association (BTMA)’ since September 2008. An operational agreement was signed between ‘Bangladesh Textile Mills Association (BTMA)’ and ‘Bangladesh Textile Mills Corporation (BTMC)’ under the Ministry of Textiles and Jute. After signing the agreement, BTMA actively took the responsibilities of NITER on May, 2009. That time it was known as ‘National Institute of Textile Training Research and Design (NITTRAD)’.

BTMA expanded the academic span of the institute and started B. Sc. in Textile Engineering course under the Faculty of Engineering and Technology of the University of Dhaka. From 2010-2011 session, B. Sc. in Textile Engineering course was started. Considering the nature and future prospect of this institute, the University of Dhaka requested the Ministry of Textiles and Jute to change the name of NITTRAD. Accordingly the Ministry renamed NITTRAD as ‘National Institute of Textile Engineering and Research (NITER)’ from January 2013.</string>
    <string name="about2">Apart from Textile Engineering course, NITER is now offering four other important engineering courses namely B. Sc. in Industrial and Production Engineering (IPE) and Fashion Design and Apparel Engineering (FDAE), Computer Science and Engineering (CSE) and Electrical and Electronics Engineering (EEE) to meet the present demand skilled manpower as well as the automation of our Textile and allied sector. Furthermore NITER has started M.Sc. in Textile Engineering course under the Faculty of Engineering and Technology and MBA in Textile and Apparel Value Chain under the faculty of Business Studies of the University of Dhaka. Near about 2500 students are studying in these courses and the numbers are increasing every year.

NITER is being operated by a ‘Governing Body’ consists of the members from BTMA, Ministry of Textiles and Jute, BTMC, University of Dhaka and from the institute as well. Mohammad Ali Khokon, renowned industrialist and the President of BTMA is the Chairman of the Governing Body.</string>
    <string name="about3">NITER has 13.06 acres of land with vibrant greenery and scenic beauty. NITER has adequate numbers of qualified faculty members, officers, and staff. There are Academic buildings and Administrative building with sufficient space. It has all kinds of modern laboratories, sufficient number of class-rooms with adequate space, web-based library, fully equipped computer labs with internet facilities, separate hostels for male and female students with amenities, canteen, playground and indoor games, wifi-zone campus etc. There are several clubs of student activities functioning in different fields. Many seminars, workshops, events take place under different clubs.

    Furthermore, NITER has a unique wing namely ‘Center for Research and Industrial Relations (CRIR)’ for operating its collaborative research and innovative activities, student’s industrial trainings as well as job placements. Generally a NITER graduate has good demand in the textile job sector and gets employed rapidly.

    There is a Proctorial-body to oversee the rules and regulations and the disciplinary activities of the students. Similarly, Hostels Superintendents are there to look after the resident students of NITER. There are also teacher’s quarters inside the NITER campus.</string>
    <string name="history">In the late 1970s, the public textile mills under the Bangladesh Textile Mills Corporation (BTMC) were operating at a loss.[1] BTMC knew it needed skilled personnel to turn the mills around. To that end, and to serve the mills testing and consulting needs, in 1979 it established a training institute at Savar, the Textile Industry Development Centre (TIDC).For the first five years, the United Nations Development Programme (UNDP), through the United Nations Industrial Development Organization (UNIDO), supported infrastructure, curriculum development, and staff training at TIDC.[1][3]

In 1994 TIDCs name changed to National Institute of Textile Training Research and Design (NITTRAD). Later the Ministry of Textiles and Jute decided to run NITTRAD under public–private partnership (PPP) and handed over its operational management to Bangladesh Textile Mills Association (BTMA) under the Ministry of Textile and Jute. From 1 January 2013, the Ministry of Textiles and Jute, according to a suggestion from the University of Dhaka, changed the name of the institute to National Institute of Textile Engineering and Research. From 2010 to 2011 session NITER started Bachelor of Science in Textile engineering course under the University of Dhaka. It was initiated by the then president of BTMA, Mr. Abdul Hai Sarkar.

It also provides practical and training classes of textile engineering to students of private universities in Bangladesh.</string>
    <string name="admin">The Institutes Administration building is where we run things efficiently, showing we want to do our best. It looks modern and has cool stuff, showing we like new ideas. All the activities of NITER  are controlled by the Administration.</string>
    <string name="ad101">The registration room at the NITER  is where students academic enroll in courses, and access important academic information. Its a vital hub for administrative processes, helping students navigate their academic responsibilities and progress in their engineering studies.</string>
    <string name="BC">The Bangabandhu Corner of NITER is a dedicated space where we honor the life and legacy of Sheikh Mujibur Rahman, also known as Bangabandhu, a prominent leader in the history of Bangladesh. This corner showcases his achievements, some books, speeches, and memorabilia, reminding us of his significant contributions to our nations independence and progress. It serves as a source of inspiration and education, ensuring that his ideals continue to resonate with generations to come.</string>
    <string name="ad103">The registrars office at NITER is the administrative hub for academic records and student information. It manages enrollment, transcripts, and official documentation, ensuring the smooth progression of students through their educational journey. This vital office plays a crucial role in maintaining the integrity of academic records and providing support to students as they navigate their educational paths.</string>
    <string name="ad104">The Office of Accounts and Audits in our Engineering institute is responsible for managing finances, budgets, and auditing. It ensures the responsible use of funds, maintaining transparency and supporting the institutions educational mission. This office plays a vital role in our institutes financial health and sustainability</string>
    <string name="ad102">The account section of NITER takes care of all the money stuff. They handle tuition fees, scholarships, and expenses. Its like the financial headquarters that keeps everything in order for students and the institution.</string>
    <string name="dr">The Directors room in our NITER is the hub of leadership, where important decisions are made and strategic plans are crafted. It embodies the institutes commitment to effective governance and academic excellence, providing a space for key discussions and initiatives.</string>
    <string name="ad108">Our Engineering institutes IT and Maintenance Office is the central point for technological support and facility upkeep. It ensures that our campus remains technologically advanced and well-maintained, creating a conducive learning environment. This office plays a vital role in keeping our institute running smoothly.</string>
    <string name="ad110">The meeting room at our engineering institute is a space where ideas are born, decisions are made, and collaborations thrive. It serves as the heart of productive discussions and strategic planning, fostering innovation and progress within the institution. This room plays a pivotal role in shaping the future of our engineering education.</string>
    <string name="ad111">The Advanced Computer Lab in NITER is a cutting-edge facility designed to empower students with the latest technology and resources. Equipped with high-performance computers and specialized software, it provides an ideal environment for research, programming, and innovation. This lab is a hub for students to develop their technical skills, engage in complex simulations, and stay at the forefront of technological advancements, enhancing their readiness for the engineering challenges of the future.</string>
    <string name="ad202">The conference room in our engineering institute is a well-equipped facility designed to accommodate important gatherings, seminars, and academic discussions. Its spacious layout and audiovisual capabilities make it an ideal venue for sharing knowledge and fostering collaboration. This room plays a pivotal role in facilitating meaningful exchanges of ideas and promoting academic excellence within our institution, enhancing the overall learning experience.</string>
    <string name="NCC">Click <a href="https://www.facebook.com/groups/NITERComputerClub"> here </a> to open NCC facebook page.</string>
    <string name="NIS">Click <a href="https://www.facebook.com/niterislamicsociety"> here </a> to open NIS facebook page.</string>
    <string name="NFPS">Click <a href="https://www.facebook.com/NITER.Photographic"> here </a> to open NFPS facebook page.</string>
    <string name="NGSC">Click <a href="https://www.facebook.com/Nitergamesandsportsclub"> here </a> to open NGSC facebook page.</string>
    <string name="NDS">Click <a href="https://www.facebook.com/niternds"> here </a> to open NDS facebook page.</string>
    <string name="NCuC">Click <a href="https://www.facebook.com/niterculturalclub"> here </a> to open NCuC facebook page.</string>
    <string name="News">Click <a href="https://www.facebook.com/niter.news"> here </a> to open NITER News facebook page.</string>
    <string name="mastul">Click <a href="https://www.facebook.com/mastul.org"> here </a> to open মাস্তুল facebook page.</string>
    <string name="wing">Click <a href="https://www.facebook.com/groups/3079194312361297"> here </a> to open NITER Wing - Team Matrix facebook page.</string>
    <string name="NSS">Click <a href="https://www.facebook.com/nitersciencesociety"> here </a> to open NSS facebook page.</string>
    <string name="NLC">Click <a href="https://www.facebook.com/NITERLC"> here </a> to open NLC facebook page.</string>
    <string name="NFC">Click <a href="https://www.facebook.com/profile.php?id=100089385592186"> here </a> to open NFC facebook page.</string>
    <string name="NCc">Click <a href="https://www.facebook.com/NITERCareerClub"> here </a> to open NCC facebook page.</string>
    <string name="NBIC">Click <a href="https://www.facebook.com/niterbusinessandinnovationclub"> here </a> to open NBIC facebook page.</string>
</resources>